background images showing but wrong size, some alignment issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,10 @@ main {
   margin-top: 100px;
 }
 
+main section:nth-of-type(1n+2) {
+  margin-left: 30px;
+}
+
 header h2, .footer h2 {
   float: left;
 }
@@ -24,9 +28,16 @@ header h2 a, nav ul li a {
 }
 
 nav ul {
-  display: inline-block;
   float: right;
   clear: both;
+  margin-right: 30px;
+  vertical-align: middle;
+  margin-top: 25px;
+}
+
+.header ul li {
+  display: inline-block;
+  margin-right: 20px;
 }
 
 .header ul {
@@ -42,25 +53,36 @@ header h2 {
   text-align: center;
 }
 
-main > section:first-child > h1 {
+.top-banner > h1 {
+  vertical-align: middle;
   text-align: center;
   padding: 50px;
-  background-color: blue;
+  height: 3em;
+  background: url("../assets/hero.jpg") 100% no-repeat;
   margin-top: -25px;
+  padding-top: 100px;
+}
+
+.posts {
+  margin: 0 auto;
 }
 
 .posts > h2, .posts h3, .posts article p:last-of-type {
   text-align: center;
 }
 
+.posts h3 {
+  height: 2em;
+  vertical-align: middle;
+}
 main section:first-child > h1 {
   clear: both;
 }
 
-main > section > article {
+.posts > article {
   width: 25%;
   float: left;
-  margin: 10px;
+  margin: 15px 10px;
   padding: 0px 10px;
   border: black 2px solid;
   border-radius: 10px;
@@ -69,14 +91,16 @@ main > section > article {
 .posts article p:first-of-type {
   text-align: justify;
   border-top: black 2px solid;
-  padding-top: 10px;
+  padding: 10px;
+  /*height: 6.5em;*/
 }
 
 .posts article p:last-of-type a {
   text-decoration: none;
   border: black 2px solid;
   border-radius: 10px;
-  padding: 5px;
+  padding: 5px 20px;
+  margin: 0;
 }
 
 .join-club {
@@ -95,35 +119,45 @@ main > section > article {
 }
 
 img#join-club-pic {
-  width: 35%;
-  float: right;
-  margin-right: 30px;
+  width: 55%;
+  /*float: right;*/
+  margin: 20px;
 }
 
 .everybody-cat {
   clear: both;
-  text-align: center;
   width: 100%;
-  background-color: blue;
-  height: 100px;
-  background-image: url(/assets/everybody.jpg);
+  /*background-color: blue;*/
+  height: auto;
+  background-image: url("../assets/everybody.jpg");
 }
 
 .everybody-cat h2 {
   vertical-align: middle;
+  font-size: 3em;
+  text-align: center;
+  width: 45%;
+  margin: 0 auto;
+  padding: 40px 0;
 }
 
 .disclaimer-section {
   width: 40%;
   text-align: justify;
+  position: absolute;
+  padding: 20px 0;
+  font-size: .75em;
 }
+
 .disclaimer-section h4, .disclaimer-section p {
   display: inline;
 }
 
-.footer nav ul {
-  position: absolute;
-  top: 0px;
-  float: left;
-  clear: both;
+.footer nav {
+  float: right;
+  padding-right: 50px;
+}
+
+footer {
+  margin-left: 30px;
 }
